--- a/app.json
+++ b/app.json
@@ -1,5 +1,5 @@
 {
-    "name": "EvaMariaBot",
+    "name": "savezmalik7960",
     "description": "When you going to send file on telegram channel this bot will save that in database, So you can search that easily in inline mode",
     "stack": "container",
     "keywords": [
@@ -15,8 +15,8 @@
       "index",
       "inline"
     ],
-    "website": "https://github.com/EvamariaTG/EvaMaria",
-    "repository": "https://github.com/savezmalik7960/EvaMaria",
+    "website": "https://github.com/savezmalik7960/filefilterbo7",
+    "repository": "https://github.com/savezmalik7960/filefilterbo7",
     "env": {
         "BOT_TOKEN": {
             "description": "Your bot token.",
